--- a/src/ui/elementaireview.ui
+++ b/src/ui/elementaireview.ui
@@ -79,6 +79,9 @@
            <property name="maximum">
             <number>255</number>
            </property>
+           <property name="value">
+            <number>30</number>
+           </property>
           </widget>
          </item>
         </layout>
