--- a/src/ui/elementaireview.ui
+++ b/src/ui/elementaireview.ui
@@ -33,36 +33,6 @@
    </item>
    <item>
     <layout class="QGridLayout" name="gridLayout">
-     <item row="1" column="0">
-      <layout class="QVBoxLayout" name="tailleForm">
-       <item>
-        <widget class="QSpinBox" name="inputTaille">
-         <property name="minimum">
-          <number>1</number>
-         </property>
-         <property name="maximum">
-          <number>50</number>
-         </property>
-         <property name="value">
-          <number>23</number>
-         </property>
-        </widget>
-       </item>
-       <item>
-        <widget class="QPushButton" name="btnRefreshTaille">
-         <property name="enabled">
-          <bool>true</bool>
-         </property>
-         <property name="styleSheet">
-          <string notr="true"/>
-         </property>
-         <property name="text">
-          <string>Rafraichir les grilles</string>
-         </property>
-        </widget>
-       </item>
-      </layout>
-     </item>
      <item row="1" column="1">
       <layout class="QHBoxLayout" name="regleForm">
        <item>
@@ -270,10 +240,43 @@
        </property>
       </widget>
      </item>
+     <item row="1" column="0">
+      <layout class="QVBoxLayout" name="tailleForm">
+       <item>
+        <widget class="QSpinBox" name="inputTaille">
+         <property name="minimum">
+          <number>1</number>
+         </property>
+         <property name="maximum">
+          <number>50</number>
+         </property>
+         <property name="value">
+          <number>23</number>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QPushButton" name="btnRefreshTaille">
+         <property name="enabled">
+          <bool>true</bool>
+         </property>
+         <property name="styleSheet">
+          <string notr="true"/>
+         </property>
+         <property name="text">
+          <string>Rafraichir les grilles</string>
+         </property>
+        </widget>
+       </item>
+      </layout>
+     </item>
     </layout>
    </item>
    <item>
     <widget class="QTableWidget" name="grilleDepart">
+     <property name="enabled">
+      <bool>true</bool>
+     </property>
      <property name="verticalScrollBarPolicy">
       <enum>Qt::ScrollBarAlwaysOff</enum>
      </property>
@@ -292,11 +295,25 @@
     </widget>
    </item>
    <item>
-    <widget class="QPushButton" name="btnPlaySimulation">
-     <property name="text">
-      <string>Lancer la simulation</string>
-     </property>
-    </widget>
+    <layout class="QHBoxLayout" name="horizontalLayout">
+     <item>
+      <widget class="QPushButton" name="btnPlay">
+       <property name="enabled">
+        <bool>true</bool>
+       </property>
+       <property name="text">
+        <string>Lancer la simulation</string>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QPushButton" name="pushButton">
+       <property name="text">
+        <string>Remise à zéro</string>
+       </property>
+      </widget>
+     </item>
+    </layout>
    </item>
    <item>
     <widget class="QTableWidget" name="grille">
