--- a/src/ui/elementaireview.ui
+++ b/src/ui/elementaireview.ui
@@ -33,7 +33,7 @@
    </item>
    <item>
     <layout class="QGridLayout" name="gridLayout">
-     <item row="1" column="1">
+     <item row="4" column="1">
       <layout class="QHBoxLayout" name="regleForm">
        <item>
         <layout class="QVBoxLayout" name="verticalLayout">
@@ -226,34 +226,31 @@
        </item>
       </layout>
      </item>
-     <item row="0" column="1">
-      <widget class="QLabel" name="label_2">
-       <property name="text">
-        <string>Règle de transition :</string>
-       </property>
-      </widget>
-     </item>
-     <item row="0" column="0">
-      <widget class="QLabel" name="label">
-       <property name="text">
-        <string>Nombre de cases :</string>
-       </property>
-      </widget>
-     </item>
-     <item row="1" column="0">
-      <layout class="QVBoxLayout" name="tailleForm">
+     <item row="4" column="0">
+      <layout class="QVBoxLayout" name="verticalLayout_11">
        <item>
-        <widget class="QSpinBox" name="inputTaille">
-         <property name="minimum">
-          <number>1</number>
-         </property>
-         <property name="maximum">
-          <number>50</number>
-         </property>
-         <property name="value">
-          <number>23</number>
-         </property>
-        </widget>
+        <layout class="QHBoxLayout" name="horizontalLayout_4">
+         <item>
+          <widget class="QLabel" name="label">
+           <property name="text">
+            <string>Nombre de cases :</string>
+           </property>
+          </widget>
+         </item>
+         <item>
+          <widget class="QSpinBox" name="inputTaille">
+           <property name="minimum">
+            <number>1</number>
+           </property>
+           <property name="maximum">
+            <number>50</number>
+           </property>
+           <property name="value">
+            <number>23</number>
+           </property>
+          </widget>
+         </item>
+        </layout>
        </item>
        <item>
         <widget class="QPushButton" name="btnRefreshTaille">
@@ -296,6 +293,13 @@
    </item>
    <item>
     <layout class="QHBoxLayout" name="horizontalLayout">
+     <item>
+      <widget class="QPushButton" name="btnNext">
+       <property name="text">
+        <string>État suivant</string>
+       </property>
+      </widget>
+     </item>
      <item>
       <widget class="QPushButton" name="btnPlay">
        <property name="enabled">
