--- a/src/ui/golview.ui
+++ b/src/ui/golview.ui
@@ -108,9 +108,25 @@
           </widget>
          </item>
          <item row="1" column="2">
-            </layout>
-           </item>
-          </layout>
+           <layout class="QHBoxLayout" name="horizontalLayout_3">
+             <item>
+               <widget class="QLabel" name="label_3">
+                 <property name="text">
+                   <string>Nombre minimum de voisins vivants :</string>
+                 </property>
+               </widget>
+             </item>
+             <item>
+               <widget class="QSpinBox" name="inputVoisinsMin">
+                 <property name="maximum">
+                   <number>8</number>
+                 </property>
+                 <property name="value">
+                   <number>2</number>
+                 </property>
+               </widget>
+             </item>
+           </layout>
          </item>
          <item row="2" column="2">
           <layout class="QHBoxLayout" name="horizontalLayout_7">
